@@ -2,6 +2,7 @@
 next
 ----
 - added setting to enable/disable built-in sound groups
+- added setting to disable individual sound groups categories
 
 
 v1.10.1
